// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SheetsFileWidget falls back to spreadsheet id if fetching properties fails 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="input-group"
    >
      <input
        class="form-control"
        disabled=""
        id="spreadsheetId"
        name="spreadsheetId"
        type="text"
        value="abc123"
      />
      <div
        class="input-group-append"
      >
        <button
          class="btn btn-info"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`SheetsFileWidget renders valid sheet on load 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="input-group"
    >
      <input
        class="form-control"
        disabled=""
        id="spreadsheetId"
        type="text"
        value="Test Sheet"
      />
      <div
        class="input-group-append"
      >
        <button
          class="btn btn-info"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`SheetsFileWidget required gapi 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div>
      <div>
        The Google API is not initialized. Please click the button to initialize it.
      </div>
      <div
        class="mt-2"
      >
        <button
          class="btn btn-primary"
          type="button"
        >
          Connect
        </button>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`SheetsFileWidget smoke test 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="input-group"
    >
      <input
        class="form-control"
        disabled=""
        id="spreadsheetId"
        name="spreadsheetId"
        type="text"
        value=""
      />
      <div
        class="input-group-append"
      >
        <button
          class="btn btn-info"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;
